@@ -1,3 +1,8 @@
+19/03/2019:
+	- Small increase in temporary buffer size in OBJ.cc colorspace() function
+	  to avoid truncation warning in GCC 8.2
+
+
 13/03/2019:
 	- Fixed bug in vertical mirroring transformation
 	- Minor change to IIIF square parsing to allow correct logging
